--- a/UserVoiceSDK/build.gradle
+++ b/UserVoiceSDK/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     repositories {
-        jcenter()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -10,35 +9,16 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:7.0.4'
     }
 }
 
 apply plugin: 'com.android.library'
-
-apply plugin: 'maven'
- 
-uploadArchives {
-    repositories.mavenDeployer {
-        pom.groupId = 'com.github.mtrezza'
-        pom.artifactId = 'uservoice-android-sdk'
-        pom.version = '1.2.14'
-        // Add other pom properties here if you want (developer details / licenses)
-        repository(url: "file:///Users/austin/tmp/")
-    }
-}
+apply plugin: 'maven-publish'
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from 'src', 'res'
-}
-
-artifacts {
-    archives sourcesJar
-}
-
-repositories {
-    mavenCentral()
+    archiveClassifier.set('sources')
+    from android.sourceSets.main.java.srcDirs
 }
 
 android {
@@ -56,11 +36,47 @@ android {
         targetSdkVersion 28
         minSdkVersion 17
     }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked"
+    }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            create('mavenJava', MavenPublication) {
+                groupId = 'com.github.mtrezza'
+                artifactId = 'uservoice-android-sdk'
+                version = '1.3.0'
+
+                // Add the AAR file produced by the Android build
+                artifact("$buildDir/outputs/aar/${project.name}-release.aar")
+
+                // Add the sources JAR
+                artifact(sourcesJar) {
+                    classifier = 'sources'
+                }
+
+                // Additional POM details can be added here if needed (licenses, developers, etc.)
+            }
+        }
+
+        repositories {
+            maven {
+                url = uri("file:///Users/austin/tmp/")
+            }
+        }
+    }
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
     implementation 'com.android.support:support-core-utils:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    implementation 'oauth.signpost:signpost-core:1.2.1.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'oauth.signpost:signpost-core:2.1.1'
 }
